--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "/bin/bash ./install.sh"
   },
-  "devDependencies": {
-    "nan": "^2.0.5",
-    "node-gyp": "^1.0.3"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/rsg98/node-wiring-pi.git"
@@ -32,6 +28,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "nan": "^2.4.0",
-    "bindings" : "1.2.1"
+    "bindings" : "1.2.1",
+    "node-gyp": "^1.0.3"
   }
 }
