--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "nan": "^2.4.0",
-    "bindings" : "1.2.1",
-    "node-gyp": "^1.0.3"
+    "nan": "^2.13.2",
+    "bindings" : "^1.5.0",
+    "node-gyp": "^3.8.0"
   }
 }
